--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,12 @@
     padding: 0;
     box-sizing: border-box;
 }
+body {
+    /* more on this crazy alphanumerical value in a minute! */
+   background-color: rgb(7, 26, 51);
+    color: #ffffff;
+    font-family: Helvetica, Arial, sans-serif;
+  }
 header{
     background-color: rgb(45, 22, 175);
     width:100%;
@@ -11,33 +17,33 @@ header{
     display:inline;
     position:relative
 }
-header a{
+header div{
     background-color: red;
-    color:white;
+    border-radius: 50%;
+    height: 100px;
+    width: 200px;
+     float:right;
 }
-body {
-    /* more on this crazy alphanumerical value in a minute! */
-   background-color: rgb(7, 26, 51);
-    color: #ffffff;
-    font-family: Helvetica, Arial, sans-serif;
-  }
-.call{
-    background-color: red;
-    width:fit-content;
-    
-    position:absolute;
+header div a{
+    font-size: small;
+    font-weight: bold;
+    color:#ffffff;
+    padding: 30px;
+    text-align: center;
+}
 
-}
+
 a{
     text-decoration:none;
 }
 ul{
     list-style: none;
+    font-size: larger;
 }
 ul li:before {
     content: '✓';
   }
 #first{
-    height:100vh;
+    height:100%vh;
     background-image: url(../images/DTown.jpg);
 }
