--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,26 +10,29 @@ body {
     font-family: Helvetica, Arial, sans-serif;
   }
 header{
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
     background-color: rgb(45, 22, 175);
     width:100%;
     height: 10%;
-    border:0;
-    display:inline;
     position:relative
 }
-header div{
+
+
+header div a{
+    text-align: center;
+    display:flex;
+    align-items: center;
     background-color: red;
     border-radius: 50%;
     height: 100px;
     width: 200px;
      float:right;
-}
-header div a{
     font-size: small;
     font-weight: bold;
     color:#ffffff;
-    padding: 30px;
-    text-align: center;
+
 }
 
 
