--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,10 +16,14 @@ header{
     background-color: rgb(45, 22, 175);
     width:100%;
     height: 10%;
-    position:relative
+    position:relative;
+    padding: 1%;
+
 }
 
-
+section{
+    padding:2%;
+}
 header div a{
     text-align: center;
     display:flex;
@@ -34,7 +38,9 @@ header div a{
     color:#ffffff;
 
 }
-
+header div a:hover{
+    background-color:darkred;
+}
 
 a{
     text-decoration:none;
@@ -46,6 +52,42 @@ ul{
 ul li:before {
     content: '✓';
   }
+.container{
+    display:flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-content: center;
+    padding:2%;
+}
+.container a{
+    text-align: center;
+    display:flex;
+    align-items: center;
+    background-color: red;
+    border-radius: 50%;
+    height: 100px;
+    width: 200px;
+     float:right;
+    font-size: small;
+    font-weight: bold;
+    color:#ffffff;
+}
+.card{
+    display:flex;
+    width:auto;
+    flex-direction: column;
+    text-align:center;
+    align-content:space-around;
+
+}
+.card i{
+    font-size: 75px;
+}
+
+.card i div p{
+    padding: 50px;
+}
+
 #first{
     height:100%vh;
     background-image: url(../images/DTown.jpg);
