--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,6 +21,7 @@ header{
 
 }
 
+
 section{
     padding:2%;
 }
@@ -86,8 +87,23 @@ ul li:before {
 
 .card i div p{
     padding: 50px;
-}
 
+}
+table{
+    width:auto;
+    align-items: center;
+}
+table th{
+    background-color: darkslategrey;
+    margin-right: 10px;
+    padding:2px;
+    height:50px;
+}
+table td{
+    height:50px;
+    margin: 2px;
+    margin-right: 10px;
+}
 #first{
     height:100%vh;
     background-image: url(../images/DTown.jpg);
