--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,6 @@
+
+
+
 * {
     margin: 0;
     padding: 0;
@@ -13,7 +16,7 @@ header{
     display:flex;
     justify-content: space-between;
     align-items: center;
-    background-color: rgb(45, 22, 175);
+    background-color: rgb(7, 26, 51);
     width:100%;
     height: 10%;
     position:relative;
@@ -72,6 +75,9 @@ ul li:before {
     font-weight: bold;
     color:#ffffff;
 }
+.container a:hover{
+    background-color:darkred;
+}
 .card{
     display:flex;
     width:auto;
@@ -106,7 +112,7 @@ table td{
     border: 2px, solid, black;
 }
 #first{
-    height:100%vh;
+    height:100vh;
     background-image: url(../images/DTown.jpg);
 }
 #why-sell-us{
