--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,11 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    line-height: 2em;
+}
+p{
+    line-height: 2em;
+    align-content: center;
 }
 body {
     /* more on this crazy alphanumerical value in a minute! */
