--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -191,3 +191,6 @@ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ec0808",endCo
     margin-left:0px;
 
 }
+.center{
+    text-align: center;
+}
