--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -138,6 +138,7 @@ table td{
 }
 #first{
     height:100vh;
+    background-repeat:no-repeat;
     background-image: url(../images/DTown.jpg);
 }
 #why-sell-us{
