--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,8 +23,8 @@ header{
     align-items: center;
     background-color: rgb(7, 26, 51);
     width:100%;
-    height: 10%;
-    position:relative;
+    height: 15%;
+    position:fixed;
     padding: 1%;
 
 }
@@ -83,7 +83,7 @@ ul{
     justify-content: space-around;
     align-content: center;
     padding:2%;
-}
+  }
 .container a{
     text-align: center;
     padding:30px;
@@ -97,6 +97,7 @@ ul{
     font-size: small;
     font-weight: bold;
     color:#ffffff;
+    border-style:outset;
      }
 
 .container a:hover{
