--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,8 +23,8 @@ header{
     align-items: center;
     background-color: rgb(7, 26, 51);
     width:100%;
-    height: 15%;
-    position:fixed;
+    height: 10%;
+    position:relative;
     padding: 1%;
 
 }
