--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -271,11 +271,11 @@ label{
         border-radius: 10px;
         padding:10px;
         width:100%;
-        margin: 0.5em;em;
+        margin: 0.5em;
     
     }
     select{
-        width:50%;
+        width:100%;
         padding:10px;
         border-radius: 10px;
         margin-bottom: 10px;
@@ -288,5 +288,8 @@ label{
     .hero-form button{
         text-align: center;
         margin-left: 3em;
+    }
+    .hero-form button:hover{
+        background-color: darkred;
     }
 }
