--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -256,7 +256,8 @@ label{
 
     }
     #form{
-        width:100vh;
+        width:vw;
+        font-size:large;
     }
     .hero-form{
         height:100vh;
