--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,17 +19,23 @@ body {
   }
 header{
     display:flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     background-color: rgb(7, 26, 51);
     width:100%;
     height: 10%;
-    position:relative;
     padding: 1%;
+}
+header img{
+    border-radius: 50%;
+    height:120px;
+    width:120px;
+    margin-left: 25px; 
 
 }
-header h2{
-    margin-left:25%;
+
+header h1{
+
     text-align: center;
 }
 
