form flexbox changes 10/1/2021

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,8 +28,8 @@ header{
 }
 header img{
     border-radius: 50%;
-    height:120px;
-    width:120px;
+    height:125px;
+    width:125px;
     margin-left: 25px; 
 
 }
@@ -183,20 +183,24 @@ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ec0808",endCo
     margin-top: auto;
 }
 .hero-form {
-    border: 3px solid #024e76;
+    display:flex;
+    flex-direction: column;
+    justify-content:center;
+    align-items: center;
+    border: 3px solid white;
     background-color: rgb(7, 26, 51);
     
     padding: 20px;
     width: 50vw;
     color: #024e76;
 }
-.hero-form button{
-    margin-left:2em;
+.hero-form button:hover{
+background-color:red;
 }
 
        .hero-form h3 {
+      text-align: center;
       font-size: 24px;
-      margin: 0;
       color: white;
     }
 
@@ -276,6 +280,7 @@ label{
     .hero-form{
 
         display: flex;
+        justify-content: stretch;
         flex-direction: column;
         border:none;
         width: 95vw;
