--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -287,6 +287,7 @@ label{
     }
     .list-item{
         margin-top:2rem;
+        padding-top:2em;
     }
     .container a{
         text-align: center;
