--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -287,7 +287,7 @@ label{
     }
     .card{
         font-size: 26px;
-        width: 500px;
+        width: 50vw;
         padding-top:10px;
         padding-bottom:10px;
     }
